feat: refine mobile-first controls and profile sync UX

--- a/public/legal/license.html
+++ b/public/legal/license.html
@@ -32,7 +32,7 @@
 
       <section class="card">
         <h2>Contacto</h2>
-        <p>Juan Diego Marquez Tebar - <a href="mailto:juandiego.marquez@gmail.com">juandiego.marquez@gmail.com</a></p>
+        <p>Juan Diego Marquez Tebar - <a href="mailto:hola@jdmarquez.dev">hola@jdmarquez.dev</a></p>
       </section>
     </main>
   </body>
