--- a/public/legal/privacy.html
+++ b/public/legal/privacy.html
@@ -28,6 +28,11 @@
       </section>
 
       <section class="card">
+        <h2>Cookies y almacenamiento local</h2>
+        <p>Tribitr utiliza almacenamiento local del navegador (localStorage/IndexedDB) para recordar ajustes, mantener el progreso y gestionar la sincronizacion entre sesiones.</p>
+      </section>
+
+      <section class="card">
         <h2>Sincronizacion</h2>
         <p>La sincronizacion usa un enlace secreto (share code) para enlazar dispositivos al mismo perfil. No hay login tradicional.</p>
       </section>
@@ -39,7 +44,7 @@
 
       <section class="card">
         <h2>Contacto</h2>
-        <p>Responsable: Juan Diego Marquez Tebar - <a href="mailto:juandiego.marquez@gmail.com">juandiego.marquez@gmail.com</a></p>
+        <p>Responsable: Juan Diego Marquez Tebar - <a href="mailto:hola@jdmarquez.dev">hola@jdmarquez.dev</a></p>
       </section>
     </main>
   </body>
